[CSS] Fixed radio button, it didnt change its own background upon being checked, making it invisible

--- a/public/assets/default_theme/css/widgets/buttons.css
+++ b/public/assets/default_theme/css/widgets/buttons.css
@@ -1,29 +1,31 @@
 input {
     all: unset;
 }
-input[type=checkbox],
-input[type=radio] {
+input[type=checkbox] {
     all: unset;
     display: inline-block;
     cursor: pointer !important;
-    width: 1rem !important;
-    height: 1rem !important;
+    width: 0.8rem !important;
+    height: 0.8rem !important;
     background: var(--accent) !important;
 }
-input[type=checkbox]:not(:hover, :focus),
-input[type=radio]:not(:hover, :focus) {
+input[type=checkbox]:not(:hover, :focus) {
     background: var(--foreground) !important;
 }
-input[type=checkbox],
-input[type=radio] {
+input[type=checkbox] {
     border: unset !important;
 }
 input[type=radio] {
-    background: var(--background-hard) !important;
+    display: inline-block;
+    width: var(--s) !important;
+    height: var(--s) !important;
+    padding-right: 4px !important;
+    background: var(--foreground);
+    box-shadow: inset 0 0 0 2px var(--foreground) !important;
+    border-radius: 50%;
 }
-input[type=radio] {
-    border-radius: 50% !important;
-    margin: 3px 3px 0 5px !important;
+input[type=radio]:checked {
+    background: var(--background-hard);
 }
 input[type=file] {
     all: unset;
@@ -33,9 +35,6 @@ input[type=file] {
     padding: unset !important;
     border-radius: var(--s);
     background: var(--gradient) !important;
-}
-input[type=radio] {
-    border: solid 0.25em !important;
 }
 input[type=checkbox] {
     background-size: 100%;
